--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
     <title>Zoom</title>
 </head>
 <body>
+
     <header>
-        <nav>
+        <nav class="flex">
+            <!-- OP. FINESTRA -->
+            <div class="opFinestra flex">
+                <div class="circle red"></div>
+                <div class="circle orange"></div>
+                <div class="circle green"></div>
+            </div>
+            <!-- / OP. FINESTRA -->
+
+            <!-- ZOOM ID -->
+            <div class="zoomId flex">
+
+                <p>
+                    Zoom Meeting ID:
+                </p>
+                <div class="censId">
+                </div>
+            </div>
+            <!-- / ZOOM ID -->
         </nav>
     </header>
+
+
     <main>
         <section id="Video"></section>
         <section id="opzioni"></section>
