abbozzato parte dell'interfaccia video

--- a/index.html
+++ b/index.html
@@ -35,7 +35,92 @@
 
 
     <main>
-        <section id="Video"></section>
+        <section id="schermata">
+            <div class="speakerView">
+                <p>
+                    <i class="speakerIcon fas fa-window-maximize"></i> Speaker View
+                </p>
+
+                <i class="expand fas fa-expand"></i>
+            </div>
+
+            <div class="container flex">
+                <!-- CONTENITORE VIDEO -->
+                <div class="videoContainer flex">
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                </div>
+                <!-- / CONTENITORE VIDEO -->
+
+                <div class="arrowLeft"></div>
+                <div class="arrowRight"></div>
+            </div>
+        </section>
+
         <section id="opzioni"></section>
     </main>
 </body>
