completata sezione Schermata

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
 
     <main>
+        <!-- ************
+                SCHERMATA
+            **************** -->
         <section id="schermata">
+            <!-- SPEAKERVIEW -->
             <div class="speakerView">
                 <p>
                     <i class="speakerIcon fas fa-window-maximize"></i> Speaker View
@@ -43,7 +47,9 @@
 
                 <i class="expand fas fa-expand"></i>
             </div>
+            <!-- / SPEAKERVIEW -->
 
+            <!-- INTERFACCIA VIDEO-->
             <div class="container flex">
                 <!-- CONTENITORE VIDEO -->
                 <div class="videoContainer flex">
@@ -113,13 +119,160 @@
                     </div>
                     <!-- / VIDEO 1 -->
 
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                     <!-- VIDEO 1 -->
+                     <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
                 </div>
                 <!-- / CONTENITORE VIDEO -->
 
-                <div class="arrowLeft"></div>
-                <div class="arrowRight"></div>
+                <!-- FRECCE -->
+                <div class="arrowLeft">
+                    <i class="fas fa-caret-left"></i>
+                    <p>
+                        1/2
+                    </p>
+                </div>
+
+                <div class="arrowRight">
+                    <i class="fas fa-caret-right"></i>
+                    <p>
+                        1/2
+                    </p>
+                </div>
+                <!-- / FRECCE -->
+
             </div>
+            <!-- / INTERFACCIA VIDEO-->
         </section>
+         <!-- ************
+              /  SCHERMATA
+            **************** -->
 
         <section id="opzioni"></section>
     </main>
