--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
     <header>
-        <nav class="flex">
+        <nav class="flex wrap">
             <!-- OP. FINESTRA -->
-            <div class="opFinestra flex">
+            <div class="opFinestra flex wrap">
                 <div class="circle red"></div>
                 <div class="circle orange"></div>
                 <div class="circle green"></div>
@@ -50,7 +50,7 @@
             <!-- / SPEAKERVIEW -->
 
             <!-- INTERFACCIA VIDEO-->
-            <div class="container flex">
+            <div class="container flex ">
                 <!-- CONTENITORE VIDEO -->
                 <div class="videoContainer flex">
 
@@ -248,6 +248,71 @@
                         </div>
                     </div>
                     <!-- / VIDEO 1 -->
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
+
+                    <!-- VIDEO 1 -->
+                    <div class="videoSingolo absCont">
+                        <div class="img">
+                            <img src="https://picsum.photos/seed/picsum/246/146
+                            " alt="randomPics">
+                        </div>
+
+                        <div class="nome">
+                            <p><i class="fas fa-microphone-alt-slash"></i> Lorem, ipsum dolor.</p>
+                        </div>
+                    </div>
+                    <!-- / VIDEO 1 -->
                 </div>
                 <!-- / CONTENITORE VIDEO -->
 
@@ -274,7 +339,84 @@
               /  SCHERMATA
             **************** -->
 
-        <section id="opzioni"></section>
+        <section id="opzioni">
+            <div class="container flex wrap">
+                <!-- OPZIONI VIDEO -->
+                <div class="opVideo flex wrap">
+                    <div class="mute">
+                        <i class="fas fa-microphone"></i>
+                        <p>Mute</p>
+                    </div>
+                    <i class="fas fa-chevron-up"></i>
+                    <div class="stop">
+                        <i class="fas fa-video"></i>
+                        <p>Stop video</p>
+                    </div>
+                    <i class="fas fa-chevron-up"></i>
+                </div>
+                <!-- / OPZIONI VIDEO -->
+
+                <!-- GENERAL -->
+                <div class="opGeneral flex wrap">
+                    <div>
+                        <i class="fas fa-user-plus"></i>
+                        <p>
+                            Invite
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-users"></i>
+                        <p>
+                            Manage partecipants
+                        </p>
+                    </div>
+                    <div>
+                        <i style="transform: rotate(270deg);" class="far fa-chart-bar"></i>
+                        <p>
+                            Polling
+                        </p>
+                    </div>
+                    <div style="margin-right: 0.5rem;">
+                        <i style="color: #51C623;"class="fas fa-external-link-alt"></i>
+                        <p>
+                            Share Screen
+                        </p>
+                    </div>
+                    <i class="fas fa-chevron-up"></i>
+                    <div>
+                        <i class="fas fa-comment-dots"></i>
+                        <p>
+                            Chat
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-record-vinyl"></i>
+                        <p>
+                            Record
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-th-large"></i>
+                        <p>
+                            Breakout Rooms
+                        </p>
+                    </div>
+                    <div>
+                        <i class="fas fa-ellipsis-h"></i>
+                        <p>
+                            More
+                        </p>
+                    </div>
+                </div>
+                <!-- / GENERAL -->
+
+                <div class="end">
+                    <p>
+                        End Meeting
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
